--- a/random_test.ipynb
+++ b/random_test.ipynb
@@ -33,7 +33,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "arcgispro-py3",
    "language": "python",
    "name": "python3"
   },
